<resources>
    <string name="app_name">MC2020-App</string>
    <string name="filterCriteriaSettings">Filterkriterien</string>

    <!-- Label for the type (tv/series) preference  -->
    <string name="pref_type_label">Typ</string>
    <!-- Label for the type series preference  -->
    <string name="pref_type_label_series">Serien</string>
    <!-- Label for the type movies preference  -->
    <string name="pref_type_label_movies">Filme</string>
    <!-- Key for the type (tv/series) preference  -->
    <string name="pref_type_key" translatable="false">type</string>
    <!-- Value in SharedPreferences for the type series preference  -->
    <string name="pref_type_series_value" translatable="false">series</string>
    <!-- Value in SharedPreferences for the type series preference  -->
    <string name="pref_type_movies_value" translatable="false">movie</string>

    <!-- Label for the genre preference  -->
    <string name="pref_genre_label">Genre</string>
    <!-- Key for the tv genre preference  -->
    <string name="pref_tv_genre_key" translatable="false">tv_genre</string>

    <!--region TV Genre labels and values-->
    <!-- Label for the genre sitcom preference  -->
    <string name="pref_tv_genre_label_comedy">Komödie</string>
    <!-- Label for the genre horror preference  -->
    <string name="pref_tv_genre_label_mystery">Mystery</string>
    <!-- Label for the genre sports documentary preference  -->
    <string name="pref_tv_genre_label_documentary">Dokumentation</string>
    <!-- Label for the genre sports action & adventure preference  -->
    <string name="pref_tv_genre_label_action_adventure">Action &amp; Adventure</string>
    <!-- Label for the genre sports animation preference  -->
    <string name="pref_tv_genre_label_animation">Animation</string>
    <!-- Label for the genre sports drama preference  -->
    <string name="pref_tv_genre_label_drama">Drama</string>
    <!-- Label for the genre sports reality preference  -->
    <string name="pref_tv_genre_label_reality">Reality</string>
    <!-- Label for the genre sports western preference  -->
    <string name="pref_tv_genre_label_western">Western</string>
    <!-- Value in SharedPreferences for the genre default preference  -->
    <string name="pref_tv_genre_default_value" translatable="false">35</string>
    <!-- Value in SharedPreferences for the genre sitcom preference  -->
    <string name="pref_tv_genre_comedy_value" translatable="false">35</string>
    <!-- Value in SharedPreferences for the genre horror preference  -->
    <string name="pref_tv_genre_mystery_value" translatable="false">9648</string>
    <!-- Value in SharedPreferences for the genre documentary preference  -->
    <string name="pref_tv_genre_documentary_value" translatable="false">99</string>
    <!-- Value in SharedPreferences for the genre action adventure preference  -->
    <string name="pref_tv_genre_action_adventure_value" translatable="false">10759</string>
    <!-- Value in SharedPreferences for the genre documentary preference  -->
    <string name="pref_tv_genre_animation_value" translatable="false">16</string>
    <!-- Value in SharedPreferences for the genre drama preference  -->
    <string name="pref_tv_genre_drama_value" translatable="false">18</string>
    <!-- Value in SharedPreferences for the genre reality preference  -->
    <string name="pref_tv_genre_reality_value" translatable="false">10764</string>
    <!-- Value in SharedPreferences for the genre western preference  -->
    <string name="pref_tv_genre_western_value" translatable="false">37</string>
    <!--endregion-->

    <!--region Film Genre labels and values-->
    <!-- Key for the tv genre preference  -->
    <string name="pref_movie_genre_key" translatable="false">movie_genre</string>
    <!-- Label for the film genre comedy preference  -->
    <string name="pref_movie_genre_label_comedy">Komödie</string>
    <!-- Label for the genre horror preference  -->
    <string name="pref_movie_genre_label_horror">Horror</string>
    <!-- Label for the genre sports documentary preference  -->
    <string name="pref_movie_genre_label_documentary">Dokumentation</string>
    <!-- Label for the genre action preference  -->
    <string name="pref_movie_genre_label_action">Action</string>
    <!-- Label for the genre adventure preference  -->
    <string name="pref_movie_genre_label_adventure">Abenteuer</string>
    <!-- Label for the genre animation preference  -->
    <string name="pref_movie_genre_label_animation">Animation</string>
    <!-- Label for the genre drama preference  -->
    <string name="pref_movie_genre_label_drama">Drama</string>
    <!-- Label for the genre western preference  -->
    <string name="pref_movie_genre_label_western">Western</string>
    <!-- Value in SharedPreferences for the genre default (comedy) preference  -->
    <string name="pref_movie_genre_default_value" translatable="false">35</string>
    <!-- Value in SharedPreferences for the genre sitcom preference  -->
    <string name="pref_movie_genre_comedy_value" translatable="false">35</string>
    <!-- Value in SharedPreferences for the genre horror preference  -->
    <string name="pref_movie_genre_horror_value" translatable="false">27</string>
    <!-- Value in SharedPreferences for the genre sports documentary preference  -->
    <string name="pref_movie_genre_documentary_value" translatable="false">99</string>
    <!-- Value in SharedPreferences for the genre action preference  -->
    <string name="pref_movie_genre_action_value" translatable="false">28</string>
    <!-- Value in SharedPreferences for the genre adventure preference  -->
    <string name="pref_movie_genre_adventure_value" translatable="false">12</string>
    <!-- Value in SharedPreferences for the genre animation preference  -->
    <string name="pref_movie_genre_animation_value" translatable="false">16</string>
    <!-- Value in SharedPreferences for the genre drama preference  -->
    <string name="pref_movie_genre_drama_value" translatable="false">18</string>
    <!-- Value in SharedPreferences for the genre western preference  -->
    <string name="pref_movie_genre_western_value" translatable="false">37</string>
    <!--endregion-->

    <!-- Value in SharedPreferences for the dialog in genre preference  -->
    <string name="selectPreferredGenre">Gewünschtes Genre auswählen</string>
    <string name="genreCountSelectedMessage">Genre ausgewählt</string>
    <string name="explore">Entdecken</string>

    <!-- Key for numberPicker dialog in SharedPreferences for the release year preference  -->
    <string name="pref_release_year_key" translatable="false">release_year</string>
    <!-- Label for the release year preference  -->
    <string name="pref_release_year_label">Erscheinungsjahr</string>
    <!-- Default value for the release year preference  -->
    <string name="pref_release_year_default" translatable="false">2020</string>

    <!-- Key for numberPicker dialog in SharedPreferences for the release year preference  -->
    <string name="pref_imdb_rating_key" translatable="false">imdb_rating</string>
    <!-- Label for the release year preference  -->
    <string name="pref_imdb_rating_label">IMDB Bewertung</string>
    <!-- Default value for the imdb rating preference  -->
    <string name="pref_imdb_rating_default" translatable="false">0-10</string>

    <!-- Label for ok button in release year dialog  -->
    <string name="ok_Button">Ok</string>
    <!-- Label for cancel button in release year dialog  -->
    <string name="cancel_Button">Abbrechen</string>

    <!-- Label for release year button in release year dialog  -->
    <string name="release_year_dialog_title">Erscheinungsjahr auswählen:</string>

    <!-- Label for release year button in release year dialog  -->
    <string name="imdb_rating_dialog_title">IMDB Bewertung festlegen:</string>
    <string name="shareMovieTitle">Teile mit deinen Freunden!</string>
    <string name="shareMovieDescription">Schau dir mal diesen Film an, der könnte dir gefallen!\u0020</string>
    <string name="shareMovieSubject">Filmempfehlung</string>

    <!-- Key for logout preference in SharedPreferences  -->
    <string name="pref_logout_key" translatable="false">logout</string>
    <!-- Label for the release year preference  -->
    <string name="pref_logout_label">Abmelden</string>
    <string name="logout_dialog_title">Abmelden</string>
    <string name="logout_dialog_message">Sind Sie sicher, dass Sie sich abmelden möchten?\n\nIhre Daten gehen nicht verloren.</string>
    <string name="logout_dialog_ok">Ok</string>
    <string name="logout_dialog_cancel">Abbrechen</string>
    <string name="logout_dialog_success">Erfolgreich abgemeldet</string>
    <string name="reached_end_of_favourite_movie_list">Keine weiteren Filme verfügbar</string>
    <string name="error_loading_favourite_movies">Fehler beim Laden der Filme aufgetreten</string>
    <string name="error_msg_parsing_error">Error: Fehlerhafte Daten</string>
    <string name="error_msg_api_error">Error: Konnte keine Filme finden</string>
    <string name="error_no_db_connection">Keine Verbindung. Bitte prüfe deine Netzwerk Verbindung.</string>
    <string name="rating_text">%s/10 Sterne</string>
    <string name="liked_movies">Liked Filme</string>
    <string name="movie_genre_label_unknown">Unbekannt</string>
    <string name="deleteLikedMovieSuccess">Erfolgreich gelöscht</string>
    <string name="deleteLikedMovieFailure">Fehler beim Löschen aufgetreten! Bitte versuchen Sie es später erneut.</string>

</resources>
