<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:defaultValue="@string/pref_type_movies_value"
        android:entries="@array/pref_type_option_labels"
        android:entryValues="@array/pref_type_option_values"
        android:key="@string/pref_type_key"
        android:title="@string/pref_type_label"
        />

    <MultiSelectListPreference
        android:defaultValue="@array/pref_movie_genre_option_values"
        android:dialogTitle="@string/selectPreferredGenre"
        android:key="@string/pref_tv_genre_key"
        android:title="@string/pref_genre_label"
        />

    <at.technikumwien.mc2020.ui.settings.custom.preference.number.picker.NumberPickerPreference
        android:key="@string/pref_release_year_key"
        android:title="@string/pref_release_year_label"
        android:defaultValue="@string/pref_release_year_default"
        />

    <at.technikumwien.mc2020.ui.settings.custom.preference.seekbar.RangeSeekBarPreference
        android:key="@string/pref_imdb_rating_key"
        android:title="@string/pref_imdb_rating_label"
        />

    <Preference
        android:key="logout"
        android:title="@string/pref_logout_label" />

</PreferenceScreen>